align correctly older/newer buttons

--- a/app/css/style.styl
+++ b/app/css/style.styl
@@ -144,6 +144,10 @@ th
       &.next
         left auto
         right 0
+        margin-right 2.5%
+
+      &.previous
+        margin-left 2.5%
 
 // in
 @import 'pages/index'
